--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -22,7 +22,7 @@
                             <a class="nav-link" aria-current="page" href="/dashboard">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Contacto</a>
+                            <a class="nav-link active" href="/contacto">Contacto</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ms-auto">
@@ -49,7 +49,7 @@
                             <h5 class="card-title">Emilio Chiesa</h5>
                             <p class="card-text">Email: emiliops410@gmail.com</p>
                             <a href="https://github.com/EmilioChiesa" target="_blank" class="btn btn-primary">
-                                <i class="fab fa-github"></i> GitHub
+                                <i class="fab fa-github"></i>
                             </a>
                         </div>
                     </div>
@@ -64,17 +64,58 @@
                         <div class="card-header">Tecnologías Utilizadas</div>
                         <div class="card-body">
                             <h5 class="card-title">Este proyecto fue construido usando:</h5>
-                            <p class="card-text">
-                                <i class="fab fa-git-square fa-2x" style="color:#F05032;"></i> Git
-                                <i class="fab fa-github-square fa-2x" style="color:#FFFFFF;"></i> GitHub
-                                <i class="fab fa-angular fa-2x" style="color:#DD0031;"></i> Angular
-                                <i class="fab fa-node-js fa-2x" style="color:#8CC84B;"></i> NestJS
-                                <i class="fas fa-database fa-2x" style="color:#FFFFFF;"></i> SQL
-                            </p>
+                            <div class="d-flex justify-content-around">
+                                <div class="text-center">
+                                    <i class="fab fa-git-square fa-2x" style="color:#F05032;"></i>
+                                    <p>Git</p>
+                                </div>
+                                <div class="text-center">
+                                    <i class="fab fa-github-square fa-2x" style="color:#FFFFFF;"></i>
+                                    <p>GitHub</p>
+                                </div>
+                                <div class="text-center">
+                                    <i class="fab fa-angular fa-2x" style="color:#DD0031;"></i>
+                                    <p>Angular</p>
+                                </div>
+                                <div class="text-center">
+                                    <i class="fab fa-node-js fa-2x" style="color:#8CC84B;"></i>
+                                    <p>NestJS</p>
+                                </div>
+                                <div class="text-center">
+                                    <i class="fas fa-database fa-2x" style="color:#FFFFFF;"></i>
+                                    <p>SQL</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <!-- Sección de Links a los Repositorios -->
+            <div class="row mt-4">
+                <div class="col-md-8 mx-auto">
+                    <div class="card bg-secondary text-white mb-3">
+                        <div class="card-header">Links a los Repositorios</div>
+                        <div class="card-body">
+                            <ul class="list-unstyled">
+                                <li>
+                                    <i class="fab fa-github fa-lg" style="color:#FFFFFF;"></i>
+                                    <a href="https://github.com/EmilioChiesa/FrontDDS2024.git" target="_blank" class="text-white"> FrontDDS2024</a>
+                                </li>
+                                <li>
+                                    <i class="fab fa-github fa-lg" style="color:#FFFFFF;"></i>
+                                    <a href="https://github.com/EmilioChiesa/Auth.git" target="_blank" class="text-white"> Auth</a>
+                                </li>
+                                <li>
+                                    <i class="fab fa-github fa-lg" style="color:#FFFFFF;"></i>
+                                    <a href="https://github.com/EmilioChiesa/Products-DS2024.git" target="_blank" class="text-white"> Products-DS2024</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 
