--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -28,7 +28,7 @@
     <div class="row justify-content-center">
       <div class="col-md-8 text-center">
         <h1 class="display-3 mb-4">Bienvenido a nuestro Dashboard</h1>
-        <p class="lead">Aquí podrás gestionar tus productos de manera eficiente.</p>
+        <p class="lead">En el podrás gestionar tus productos de manera eficiente.</p>
         <button (click)="fetchProducts()" class="btn btn-primary btn-lg mt-4">
           <i class="fas fa-store"></i> Ver Productos
         </button>
@@ -47,7 +47,7 @@
       </div>
     </div>
 
-    <div class="row mt-5">
+    <div class="row mt-5" *ngIf="showProducts">
       <div class="col-md-10 mx-auto">
         <div *ngIf="errorMessage" class="alert alert-danger">
           {{ errorMessage }}
